--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
-  <script type="module" src="main.js"></script>
+  <body>
+    <button onclick="onClickAssemblyScript()">Assembly Script</button>
+    <button onclick="onClickEmscripten()">emscripten-c</button>
+    <button onclick="onClickDotnet()">dotnet</button>
+    <script src="main.js"></script>
+  </body>
 </html>
