Added Rust Example

--- a/examples-ui/src/index.html
+++ b/examples-ui/src/index.html
@@ -29,6 +29,11 @@
             <span class="checkmark"></span>
           </label>
           <label class="radio-button">
+            Rust
+            <input type="radio" name="radio" value="rust.wasm" />
+            <span class="checkmark"></span>
+          </label>
+          <label class="radio-button">
             Uploaded
             <input type="radio" name="radio" value="uploaded.wasm" disabled />
             <span class="checkmark"></span>
