--- a/examples-ui/src/index.html
+++ b/examples-ui/src/index.html
@@ -43,7 +43,7 @@
         <div class="card">
           <h1>Action</h1>
           <button id="load-module">Load module</button>
-          <button id="instantiate" disabled>Instantiate</button>
+          <button id="instantiate">Instantiate</button>
           <button id="upload-wasm" disabled>Upload WASM</button>
         </div>
         <div class="card">
