--- a/examples-ui/src/index.html
+++ b/examples-ui/src/index.html
@@ -15,7 +15,7 @@
           <h1>File</h1>
           <label class="radio-button">
             Assembly Script
-            <input type="radio" checked="checked" name="radio" value="assembly-script.wasm" />
+            <input type="radio" checked="checked" name="radio" value="assembly-script-release.wasm" />
             <span class="checkmark"></span>
           </label>
           <label class="radio-button">
@@ -30,7 +30,7 @@
           </label>
           <label class="radio-button">
             Rust
-            <input type="radio" name="radio" value="rust.wasm" />
+            <input type="radio" name="radio" value="rust_bg.wasm" />
             <span class="checkmark"></span>
           </label>
           <label class="radio-button">
