--- a/wasm-inspector/src/index.html
+++ b/wasm-inspector/src/index.html
@@ -34,6 +34,12 @@
             <span class="checkmark"></span>
           </label>
           <label class="radio-button">
+            Wat2Wasm
+            <input type="radio" name="radio" value="wat2wasm.wasm" />
+            <span class="checkmark"></span>
+          </label>
+
+          <label class="radio-button">
             Uploaded
             <input type="radio" name="radio" value="uploaded.wasm" disabled />
             <span class="checkmark"></span>
