--- a/rust/index.html
+++ b/rust/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script type="module">
-      import init, { greet } from "./pkg/rust.js";
+      import init, { greet } from "./pkg/hello_wasm.js";
       init().then(() => {
         greet("WebAssembly");
       });
