--- a/wasm-inspector/src/index.html
+++ b/wasm-inspector/src/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <file-element></file-element>
+    <action-element></action-element>
+    <result-element></result-element>
+    <app-button></app-button>
+
     <!-- onClickSubmit(event) -->
     <form action="#" onsubmit="onClickSubmit(event); return false;">
       <div class="wrap-container">
@@ -60,5 +65,7 @@
     </form>
 
     <script src="main.ts"></script>
+    <script type="module" src="components/index.ts"></script>
+    <script type="module" src="primitives/index.ts"></script>
   </body>
 </html>
