--- a/wasm-inspector/src/index.html
+++ b/wasm-inspector/src/index.html
@@ -64,7 +64,7 @@
       </div>
     </form>
 
-    <script src="main.ts"></script>
+    <script type="module" src="main.ts"></script>
     <script type="module" src="components/index.ts"></script>
     <script type="module" src="primitives/index.ts"></script>
   </body>
